Restore missing css. Hide the uploader list and fix alignment

--- a/browse_and_upload_field/static/filebrowser/css/custom_browse_and_upload_field.css
+++ b/browse_and_upload_field/static/filebrowser/css/custom_browse_and_upload_field.css
@@ -1,3 +1,11 @@
 .fb-browseuploadfieldwrapper {
     display: table-row;
 }
+
+.fb-uploader-container .fb-upload-list {
+    display: none;
+}
+
+.fb-uploader-container {
+    width: inherit;
+}
